# s18-software-challenge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  platformio.ini
backend/: README.md  dashboard.html  server.go
backend/arduinotest/: config.json
backend/arduinotest/src/: main.cpp
backend/serial/: serial.go
dashboard-HTML/: README.md  app.js  index.html  package-lock.json  package.json
dashboard-QML/: ContactModel.qmlc  PodModel.qml  PodModel.qmlc  dashboard.qml  dashboard.qmlc  dashboard.qmlproject  podclient.h  test-websocket server.py
embedded/pc-build/: CMakeLists.txt
embedded/pc-build/mock-cosa/Cosa/: Trace.hh  UART.cpp  UART.hh
embedded/src/: SimplexNoise.cpp  SimplexNoise.h  addresses.h  data_provider.h  genfunc.cpp  genfunc.h  main.cpp  statehandler.h
pc-build/: CMakeLists.txt  loop.h  main.cpp
pc-build/gui/: app.cpp  app.h  scene.cpp  scene.h
pc-build/mock-cosa/Cosa/: RTT.cpp  RTT.hh  Trace.cpp  UART.cpp
src/: SimplexNoise.cpp  SimplexNoise.h  addresses.h  data_provider.h  genfunc.cpp  main.cpp  statehandler.h
